force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <label>Collection Schedule</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>