force-app/main/default/objects/Schedule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for the driver&apos;s app, looking at the &quot;Collection Active&quot; as you can&apos;t use a formula in a roll-up summary</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>