force-app/main/default/objects/Schedule__c/fields/Agreed_Length_of_Collection_Window__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Length_of_Collection_Window__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Agreed Length of Collection Window</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>