force-app/main/default/objects/Schedule__c/fields/AMorPM__c.field-meta.xml
<CustomField>
    <fullName>AMorPM__c</fullName>
    <formula>If(left(Time__c,2)=&apos;05&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;06&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;07&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;08&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;09&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;10&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;11&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;12&apos;,&apos;AM&apos;,
 If(left(Time__c,2)=&apos;13&apos;,&apos;DAY&apos;,
 If(left(Time__c,2)=&apos;14&apos;,&apos;DAY&apos;,
 If(left(Time__c,2)=&apos;15&apos;,&apos;DAY&apos;,
 If(left(Time__c,2)=&apos;16&apos;,&apos;DAY&apos;,
 If(left(Time__c,2)=&apos;17&apos;,&apos;DAY&apos;,
&apos;PM&apos;)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMorPM</label>
    <type>Text</type>
</CustomField>