force-app/main/default/objects/Schedule__c/fields/Billing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postcode__c</fullName>
    <formula>Location__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postcode</label>
    <type>Text</type>
</CustomField>