force-app/main/default/objects/Schedule__c/fields/Collection_Active__c.field-meta.xml
<CustomField>
    <fullName>Collection_Active__c</fullName>
    <formula>Location__r.IsLive__c &amp;&amp; NOT(OR(ISBLANK(Round__c), Collection_Suspended__c, AND(NOT(ISBLANK(Start_Date__c)), Start_Date__c &gt; TODAY()), AND(NOT(ISBLANK(End_Date__c)), End_Date__c &lt; TODAY())))</formula>
    <label>Collection Active</label>
    <type>Checkbox</type>
</CustomField>