force-app/main/default/objects/Schedule__c/fields/Collection_Day__c.field-meta.xml
<CustomField>
    <fullName>Collection_Day__c</fullName>
    <description>The day in which the collection will be performed.</description>
    <inlineHelpText>The day in which the collection will be performed.</inlineHelpText>
    <label>Collection Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>