force-app/main/default/objects/Schedule__c/fields/Collection_Est_Weight__c.field-meta.xml
<CustomField>
    <fullName>Collection_Est_Weight__c</fullName>
    <formula>Supplier_Product__r.Product__r.Estimated_Weight__c * Collection_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection_Est_Weight</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>