force-app/main/default/objects/Schedule__c/fields/Collection_Note__c.field-meta.xml
<CustomField>
    <fullName>Collection_Note__c</fullName>
    <label>Collection Note</label>
    <length>140</length>
    <type>Text</type>
</CustomField>