force-app/main/default/objects/Schedule__c/fields/Collection_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Collection_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Collection quantity - always 1 unless bins are used, in which case the number of bins</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>