force-app/main/default/objects/Schedule__c/fields/Collection_Stream__c.field-meta.xml
<CustomField>
    <fullName>Collection_Stream__c</fullName>
    <formula>Supplier_Product__r.Product__r.Product_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Stream</label>
    <type>Text</type>
</CustomField>