force-app/main/default/objects/Schedule__c/fields/Collection_Suspended__c.field-meta.xml
<CustomField>
    <fullName>Collection_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Suspended?</label>
    <type>Checkbox</type>
</CustomField>