force-app/main/default/objects/Schedule__c/fields/Collection_today__c.field-meta.xml
<CustomField>
    <fullName>Collection_today__c</fullName>
    <description>true is collection day = today. Useful for reporting</description>
    <formula>IF ( TextDays__c == CASE(
   WEEKDAY(TODAY()) ,
  2, &quot;Monday&quot;,
  3, &quot;Tuesday&quot;,
  4, &quot;Wednesday&quot;,
  5, &quot;Thursday&quot;,
  6, &quot;Friday&quot;,
  7, &quot;Saturday&quot;, 
  &quot;Sunday&quot;
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection today?</label>
    <type>Checkbox</type>
</CustomField>