force-app/main/default/objects/Schedule__c/fields/CollectionAggregator__c.field-meta.xml
<CustomField>
    <fullName>CollectionAggregator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Aggregator</label>
    <referenceTo>CollectionAggregator__c</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>