force-app/main/default/objects/Schedule__c/fields/CollectionStatus__c.field-meta.xml
<CustomField>
    <fullName>CollectionStatus__c</fullName>
    <description>Displays image of active, suspended or inactive depending on status</description>
    <formula>IF(AND(Round__c = null, Collection_Suspended__c = False), IMAGE(&quot;/resource/CollectionSchedule/CollectionStatus/Pending.jpg&quot;,&quot;Pending&quot;),
IF(Week_Off__c, IMAGE(&quot;/resource/CollectionSchedule/CollectionStatus/WeekOff.jpg&quot;,&quot;Week Off&quot;),
IF( Collection_Suspended__c = true, IMAGE(&quot;/resource/CollectionSchedule/CollectionStatus/Suspended.jpg&quot;,&quot;Suspended&quot;),
IF(End_Date__c &lt; TODAY(), IMAGE(&quot;/resource/CollectionSchedule/CollectionStatus/Expired.jpg&quot;,&quot;Expired&quot;),
IMAGE(&quot;/resource/CollectionSchedule/CollectionStatus/Active.jpg&quot;,&quot;Active&quot;)))))</formula>
    <label>Collection Status</label>
    <type>Text</type>
</CustomField>