force-app/main/default/objects/Schedule__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <formula>Supplier_Product__r.Product__r.Container_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Type</label>
    <type>Text</type>
</CustomField>