force-app/main/default/objects/Schedule__c/fields/DayIndex__c.field-meta.xml
<CustomField>
    <fullName>DayIndex__c</fullName>
    <formula>IF(TextDays__c = &quot;Sunday&quot;, 1,
IF(TextDays__c = &quot;Monday&quot;, 2,
IF(TextDays__c = &quot;Tuesday&quot;, 3,
IF(TextDays__c = &quot;Wednesday&quot;, 4,
IF(TextDays__c = &quot;Thursday&quot;, 5,
IF(TextDays__c = &quot;Friday&quot;, 6,
IF(TextDays__c = &quot;Saturday&quot;, 7, null)))))))</formula>
    <label>Day Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>