force-app/main/default/objects/Schedule__c/fields/Dead_or_Alive__c.field-meta.xml
<CustomField>
    <fullName>Dead_or_Alive__c</fullName>
    <formula>text(Location__r.Enqix_Dead_Live__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dead or Alive</label>
    <type>Text</type>
</CustomField>