force-app/main/default/objects/Schedule__c/fields/Earliest_Arrival_Text__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Arrival_Text__c</fullName>
    <formula>TEXT(EarliestArrival__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Arrival (Text)</label>
    <type>Text</type>
</CustomField>