force-app/main/default/objects/Schedule__c/fields/EarliestArrival__c.field-meta.xml
<CustomField>
    <fullName>EarliestArrival__c</fullName>
    <label>Earliest Arrival</label>
    <type>Time</type>
</CustomField>