force-app/main/default/objects/Schedule__c/fields/Enqix_Collection_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Collection_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The collection schedule Id from Enqix system</description>
    <externalId>true</externalId>
    <inlineHelpText>The  collection schedule Id assigned in Enqix system</inlineHelpText>
    <label>Enqix Collection ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>