force-app/main/default/objects/Schedule__c/fields/Enqix_Price__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Price__c</fullName>
    <label>Manual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>