force-app/main/default/objects/Schedule__c/fields/Fortnightly__c.field-meta.xml
<CustomField>
    <fullName>Fortnightly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fortnightly?</label>
    <type>Checkbox</type>
</CustomField>