force-app/main/default/objects/Schedule__c/fields/Friday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Friday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday Collection</label>
    <type>Checkbox</type>
</CustomField>