force-app/main/default/objects/Schedule__c/fields/Future_DMR__c.field-meta.xml
<CustomField>
    <fullName>Future_DMR__c</fullName>
    <label>Future DMR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>