force-app/main/default/objects/Schedule__c/fields/Future_GW__c.field-meta.xml
<CustomField>
    <fullName>Future_GW__c</fullName>
    <label>Future GW</label>
    <length>30</length>
    <type>Text</type>
</CustomField>