force-app/main/default/objects/Schedule__c/fields/Future_OR__c.field-meta.xml
<CustomField>
    <fullName>Future_OR__c</fullName>
    <label>Future OR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>