force-app/main/default/objects/Schedule__c/fields/Has_ever_been_modified_on_portal__c.field-meta.xml
<CustomField>
    <fullName>Has_ever_been_modified_on_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked to true using a process if a portal user has ever modified this collection record.</description>
    <label>Ever been modified on portal?</label>
    <type>Checkbox</type>
</CustomField>