force-app/main/default/objects/Schedule__c/fields/Is_bin_collection__c.field-meta.xml
<CustomField>
    <fullName>Is_bin_collection__c</fullName>
    <formula>AND(ISPICKVAL(Supplier_Product__r.Product__r.Product_Type__c, &apos;Collection&apos;), OR(ISPICKVAL(Supplier_Product__r.Product__r.Container_Type__r.Type__c, &apos;Bin&apos;), ISPICKVAL(Supplier_Product__r.Product__r.Container_Type__r.Type__c, &apos;Bale&apos;)))</formula>
    <label>Is bin collection?</label>
    <type>Checkbox</type>
</CustomField>