force-app/main/default/objects/Schedule__c/fields/Is_Internal_Collection__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal_Collection__c</fullName>
    <formula>AND(
  OR(
    Supplier_Product__r.Product__r.Container_Type__r.Name = &apos;Internal Collection&apos;, 
    Supplier_Product__r.Product__r.Container_Type__r.Name = &apos;Partner Internal Collection&apos;
  ), 
  ISPICKVAL(Supplier_Product__r.Product__r.Product_Type__c, &apos;Collection&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal Collection?</label>
    <type>Checkbox</type>
</CustomField>