force-app/main/default/objects/Schedule__c/fields/Is_subbed_bin_collection__c.field-meta.xml
<CustomField>
    <fullName>Is_subbed_bin_collection__c</fullName>
    <description>Checks whether a collection is subbed and a bin collection and therefore needs to be charged.</description>
    <formula>AND( Supplier__r.Name  != &apos;First Mile Ltd&apos;,NOT(ISBLANK(Supplier__c)), Is_bin_collection__c = true)</formula>
    <label>Is subbed bin collection?</label>
    <type>Checkbox</type>
</CustomField>