force-app/main/default/objects/Schedule__c/fields/IsActiveToday__c.field-meta.xml
<CustomField>
    <fullName>IsActiveToday__c</fullName>
    <formula>AND(OR(ISBLANK(Start_Date__c), Start_Date__c &lt;= TODAY()), OR(ISBLANK(End_Date__c), End_Date__c &gt;= TODAY()))</formula>
    <label>Active Today?</label>
    <type>Checkbox</type>
</CustomField>