force-app/main/default/objects/Schedule__c/fields/IsNextCollectionDateInFuture__c.field-meta.xml
<CustomField>
    <fullName>IsNextCollectionDateInFuture__c</fullName>
    <formula>OR(NextCollectionDate__c &gt; TODAY(), ISBLANK(NextCollectionDate__c))</formula>
    <label>Next Collection Date in Future?</label>
    <type>Checkbox</type>
</CustomField>