force-app/main/default/objects/Schedule__c/fields/IsRoundActiveOnDay__c.field-meta.xml
<CustomField>
    <fullName>IsRoundActiveOnDay__c</fullName>
    <formula>CASE(TextDays__c,
&quot;Monday&quot;, IF(Round__r.Mon__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;Tuesday&quot;, IF(Round__r.Tue__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;Wednesday&quot;, IF(Round__r.Wed__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;Thursday&quot;, IF(Round__r.Thu__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;Friday&quot;, IF(Round__r.Fri__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;Saturday&quot;, IF(Round__r.Sat__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;Sunday&quot;, IF(Round__r.Sun__c, &quot;TRUE&quot;, &quot;FALSE&quot;),
&quot;FALSE&quot;) == &quot;TRUE&quot;</formula>
    <label>Round Active On Day?</label>
    <type>Checkbox</type>
</CustomField>