force-app/main/default/objects/Schedule__c/fields/IsSupplierProductActive__c.field-meta.xml
<CustomField>
    <fullName>IsSupplierProductActive__c</fullName>
    <formula>AND(Supplier_Product__r.IsActive__c, Supplier__r.Supplier_Active__c)</formula>
    <label>Supplier Product Active?</label>
    <type>Checkbox</type>
</CustomField>