force-app/main/default/objects/Schedule__c/fields/Last_time_modified_on_portal__c.field-meta.xml
<CustomField>
    <fullName>Last_time_modified_on_portal__c</fullName>
    <description>Shows date and time a the collection was last modified on the portal if it has ever been modified on the portal</description>
    <label>Last time modified on portal</label>
    <type>DateTime</type>
</CustomField>