force-app/main/default/objects/Schedule__c/fields/Latest_Arrival_Text__c.field-meta.xml
<CustomField>
    <fullName>Latest_Arrival_Text__c</fullName>
    <formula>TEXT(LatestArrival__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Arrival (Text)</label>
    <type>Text</type>
</CustomField>