force-app/main/default/objects/Schedule__c/fields/LatestArrival__c.field-meta.xml
<CustomField>
    <fullName>LatestArrival__c</fullName>
    <description>LatestArrival - to help Miley optimise rounds</description>
    <label>Latest Arrival</label>
    <type>Time</type>
</CustomField>