force-app/main/default/objects/Schedule__c/fields/List_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Formula__c</fullName>
    <formula>List_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price from the selected Pricebook</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>