force-app/main/default/objects/Schedule__c/fields/Location_Collection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Collection_Notes__c</fullName>
    <label>Location Collection Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>