force-app/main/default/objects/Schedule__c/fields/Monday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Monday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday Collection</label>
    <type>Checkbox</type>
</CustomField>