force-app/main/default/objects/Schedule__c/fields/Needs_Bin_Weighing__c.field-meta.xml
<CustomField>
    <fullName>Needs_Bin_Weighing__c</fullName>
    <formula>IF(
  AND(
    Is_bin_collection__c = TRUE,
     Supplier__r.Name  = &quot;First Mile Ltd&quot;,
     Location__r.Parent.Needs_Bin_Weighing__c  = TRUE
  ),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Bin Weighing?</label>
    <type>Checkbox</type>
</CustomField>