force-app/main/default/objects/Schedule__c/fields/NextCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>NextCollectionDate__c</fullName>
    <formula>PreviousCollectionDate__c + (VALUE(TEXT(WeekFrequency__c)) * 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Date</label>
    <type>Date</type>
</CustomField>