force-app/main/default/objects/Schedule__c/fields/Po_Number_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Po_Number_Supplier__c</fullName>
    <label>Po Number Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>