force-app/main/default/objects/Schedule__c/fields/PreviousCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousCollectionDate__c</fullName>
    <label>Previous Collection Date</label>
    <type>Date</type>
</CustomField>