force-app/main/default/objects/Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Searched product does not match a collection product.</errorMessage>
        <filterItems>
            <field>Product2.Product_Type__c</field>
            <operation>equals</operation>
            <value>Collection</value>
        </filterItems>
        <infoMessage>Collection Product</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>