force-app/main/default/objects/Schedule__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <formula>CASESAFEID(Supplier_Product__r.Product__r.Id)</formula>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>