force-app/main/default/objects/Schedule__c/fields/Quantity_Changed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Flag used for checking if a new WTN is needed.</inlineHelpText>
    <label>Quantity Changed</label>
    <type>Checkbox</type>
</CustomField>