force-app/main/default/objects/Schedule__c/fields/Reactivation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Start_Date__c</fullName>
    <label>Reactivation Start Date</label>
    <type>Date</type>
</CustomField>