force-app/main/default/objects/Schedule__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>