force-app/main/default/objects/Schedule__c/fields/Round_ID_to_change_from__c.field-meta.xml
<CustomField>
    <fullName>Round_ID_to_change_from__c</fullName>
    <label>Round ID to change from</label>
    <length>60</length>
    <type>Text</type>
</CustomField>