force-app/main/default/objects/Schedule__c/fields/Round_Name__c.field-meta.xml
<CustomField>
    <fullName>Round_Name__c</fullName>
    <formula>Round__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Name</label>
    <type>Text</type>
</CustomField>