force-app/main/default/objects/Schedule__c/fields/Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Number__c</fullName>
    <label>Round Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>