force-app/main/default/objects/Schedule__c/fields/Round_to_Change_From__c.field-meta.xml
<CustomField>
    <fullName>Round_to_Change_From__c</fullName>
    <label>Round to Change From</label>
    <length>60</length>
    <type>Text</type>
</CustomField>