force-app/main/default/objects/Schedule__c/fields/RoundNo__c.field-meta.xml
<CustomField>
    <fullName>RoundNo__c</fullName>
    <formula>Round__r.RoundNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoundNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>