force-app/main/default/objects/Schedule__c/fields/RoundStream__c.field-meta.xml
<CustomField>
    <fullName>RoundStream__c</fullName>
    <formula>Supplier_Product__r.Product__r.Product_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RoundStream</label>
    <type>Text</type>
</CustomField>