force-app/main/default/objects/Schedule__c/fields/Sale_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price_Formula__c</fullName>
    <formula>Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>