force-app/main/default/objects/Schedule__c/fields/Saturday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Collection</label>
    <type>Checkbox</type>
</CustomField>