force-app/main/default/objects/Schedule__c/fields/schedule_1_field__c.field-meta.xml
<CustomField>
    <fullName>schedule_1_field__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>schedule 1 field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>