force-app/main/default/objects/Schedule__c/fields/Show_on_App__c.field-meta.xml
<CustomField>
    <fullName>Show_on_App__c</fullName>
    <formula>OR(Location__r.On_Priority__c = TRUE,(TODAY() - Location__r.Realstart__c)&lt;= 30.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show on App?</label>
    <type>Checkbox</type>
</CustomField>