force-app/main/default/objects/Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY() + 1</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>