force-app/main/default/objects/Schedule__c/fields/Streams__c.field-meta.xml
<CustomField>
    <fullName>Streams__c</fullName>
    <label>Streams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed Recycling</fullName>
            </value>
            <value>
                <fullName>General Waste</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Coffee Grounds</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Food Recycling</fullName>
                <isActive>false</isActive>
                <label>Food Recycling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>