force-app/main/default/objects/Schedule__c/fields/Sunday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday Collection</label>
    <type>Checkbox</type>
</CustomField>