force-app/main/default/objects/Schedule__c/fields/Supplier_Product__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Supplier_Product__c.Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>Supplier_Product__c.Product__r.Product_Type__c</field>
            <operation>equals</operation>
            <value>Collection</value>
        </filterItems>
        <filterItems>
            <field>Supplier_Product__c.Product__r.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Supplier_Product__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Supplier_Product__c</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>