force-app/main/default/objects/Schedule__c/fields/Supplier_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product_Name__c</fullName>
    <description>The name of the product .</description>
    <formula>Supplier_Product__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the product .</inlineHelpText>
    <label>Supplier Product Name</label>
    <type>Text</type>
</CustomField>