force-app/main/default/objects/Schedule__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <formula>Supplier_Product__r.Supplier__r.Name</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>