force-app/main/default/objects/Schedule__c/fields/SupplierUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>SupplierUnitPrice__c</fullName>
    <label>Supplier Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>