force-app/main/default/objects/Schedule__c/fields/SuspendedRoundId__c.field-meta.xml
<CustomField>
    <fullName>SuspendedRoundId__c</fullName>
    <label>Suspended Round Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>