force-app/main/default/objects/Schedule__c/fields/Suspension_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Start_Date__c</fullName>
    <label>Suspension Start Date</label>
    <type>Date</type>
</CustomField>