force-app/main/default/objects/Schedule__c/fields/TextDays__c.field-meta.xml
<CustomField>
    <fullName>TextDays__c</fullName>
    <formula>IF( INCLUDES(Days__c, &apos;Monday&apos;), &apos;Monday&apos;, null)+
IF( INCLUDES(Days__c, &apos;Tuesday&apos;), &apos;Tuesday&apos;, null)+
IF( INCLUDES(Days__c, &apos;Wednesday&apos;), &apos;Wednesday&apos;, null)+
IF( INCLUDES(Days__c, &apos;Thursday&apos;), &apos;Thursday&apos;, null)+
IF( INCLUDES(Days__c, &apos;Friday&apos;), &apos;Friday&apos;, null)+
IF( INCLUDES(Days__c, &apos;Saturday&apos;), &apos;Saturday&apos;, null)+
IF( INCLUDES(Days__c, &apos;Sunday&apos;), &apos;Sunday&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TextDays</label>
    <type>Text</type>
</CustomField>