force-app/main/default/objects/Schedule__c/fields/Thursday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thursday Collection</label>
    <type>Checkbox</type>
</CustomField>