force-app/main/default/objects/Schedule__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <defaultValue>&quot;18:00&quot;</defaultValue>
    <inlineHelpText>24 Hour Format e.g. 18:00</inlineHelpText>
    <label>Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>