force-app/main/default/objects/Schedule__c/fields/Tuesday_Collection__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday Collection</label>
    <type>Checkbox</type>
</CustomField>