force-app/main/default/objects/Schedule__c/fields/UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueCode__c</fullName>
    <label>UniqueCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>